k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: backend-deployment
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend-deployment
    spec:
      containers:
      - image: ums-backend
        name: ums-backend
        ports:
        - containerPort: 80
        resources: {}
status: {}
