k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-deploy
  name: frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend-deploy
    spec:
      containers:
      - image: ums-frontend
        name: ums-frontend
        ports:
        - containerPort: 80
        resources: {}
status: {}
