k8s/mariadb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mariadb-deployment
  name: mariadb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mariadb-deployment
    spec:
      containers:
      - image: mariadb
        name: mariadb
        ports:
        - containerPort: 3306
        resources: {}
status: {}
